--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid m-0 p-0">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid" style="background-color: yellowgreen; width: 1700px;">
-                <a class="navbar-brand" href="#">Bolby.</a> 
+                <a class="navbar-brand" href="#">Aung Myo Khant</a> 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav nav justify-content-end" style="margin-left: 400px; gap: 20px;">
                         <li class="nav-item">
@@ -46,7 +46,7 @@
             <div class="d-flex justify-content-center align-items-center flex-column" style="height: 90vh;">
                 <div style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-direction: column;">
                     <img src="./img/60111.jpg" class="card-img-top" style="height: 150px; width: 150px; border-radius: 50%">            
-                    <h2>Bolby Doe</h2>
+                    <h2>Aung Myo Khant</h2>
                     <h4>I'm Web Developer.</h4>
                 </div>
                 <div class="d-flex w-25 justify-content-around mt-3">
